@startuml DM-BOARD
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Board" {
    entity Board

    class Title
    entity Column
    entity Row

    class Archived
}

package "<<aggregate>> PostIt" {
    entity PostIt
}

package "<<aggregate>> User" {
    entity User
}

entity PostIt <<entity>> <<root>> {
}

entity User <<entity>> <<root>> {
}

Board --> "1" Title : is identified by
Board *-- "1..*" Column : has a collection of
Board *-- "1..*" Row : has a collection of

entity Board <<entity>> <<root>> {
}

entity Column <<entity>> {
  - id
}

Column --> "1" Title : is identified by

entity Row <<entity>> {
  - id
}

Row --> "1" Title : is identified by

class Title <<(V,#FF8B40) value object>> {}

class Archived <<(V,#FF8B40) value object>> {
  - archivedAt
}

Board --> "1" User : is owned by
Board --> "0..1" Archived : is

PostIt ---> "1" User : is owned by
PostIt ---> "1" Board : belongs to

@enduml
